updated React to ver 18, added Browser route for index.js, added nav component to app.js, navbar mostly done

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,12 @@
 
+@media (max-width: 500px) {
+    .headerMenu{
+        display:none;
+    }
+}
+
+@media (min-width: 500px) {
+    .menuIcon{
+        display:none;
+    }
+}
