--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -2,7 +2,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: Poppins, system-ui, sans-serif;;
+  font-family: Poppins, system-ui, sans-serif;
 }
 
 body {
@@ -52,4 +52,22 @@ body {
 
 .nav li:hover {
   background-color: rgb(235, 235, 235);
+}
+
+@media (max-width: 640px) {
+  .container {
+    text-align: center;
+  }
+
+  .nav {
+    flex-direction: column;
+  }
+
+  .nav ul {
+    flex-direction: column;
+  }
+
+  .nav li {
+    margin: 0.8em 0;
+  }
 }
