--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -1,21 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Quicksand&display=swap');
 
 * {
-  box-sizing: border-box;
   font-family: Poppins, system-ui, sans-serif;
-}
-
-body {
-  margin: 0;
 }
 
 .container {
   margin: 1rem;
   text-align: center;
+  width: 100vw;
 }
 
 .nav {
-  background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   display: flex;
   justify-content: space-between;
