--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,23 +5,63 @@
 }
 
 body {
+    margin:0;
+    padding: 0;
     background-color: rgb(245, 245, 245);
 }
 
 .hero {
-    background-image: url("https://images.unsplash.com/photo-1575833947895-6c6223316549");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
-    height: 500px;
-    margin: 1rem;
-    text-align: center;
-    text-shadow: 1px 1px 2px rgb(226, 226, 226);
+    height: 100vh;
+    width: 100vw;
+    
 }
 
-.hero-text {
-    font-size: 2rem;
-    padding-top: 1rem;
-    font-family: Poppins, system-ui, sans-serif;
+.hero::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 80%;
+    top: 0;
+    left: 0;
+    background-image: url("https://images.unsplash.com/photo-1575833947895-6c6223316549");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-content {
+    position: relative;
+    text-align: center;
+    top: 36%;
+    color: black;
   }
+
+.title {
+    font-size: 4rem;
+    font-weight: 200;
+    text-shadow: 1px 1px 1px beige;
+    
+}
+
+.subtitle {
+    font-size: 2rem;
+}
+
+.example-img {
+    height: 100%;
+    width: 75%;
+}
+
+.link {
+    text-decoration: none;
+    color:black;
+}
+
+.link:hover {
+    background-color:rgb(235, 235, 235);
+    color: black;
+}
