added login and signup forms. need to test functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,3 +65,19 @@ body {
     background-color:rgb(235, 235, 235);
     color: black;
 }
+
+/* Login form */
+  /* .login-form-button {
+    width: 60%;
+    background-color: #141414;
+  } 
+
+  .signup-form-button {
+    width: 60%;
+    background-color: #141414;
+  }
+
+.signup-form-button:hover {
+    background-color: #f5f5f5;
+    border-color: #f5f5f5;
+    color: black } */
