--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,9 +10,11 @@ body {
     background-color: rgb(245, 245, 245);
 }
 
+/* HOMEPAGE */
 .page-container {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .hero {
@@ -147,18 +149,26 @@ body {
     color: black;
 }
 
-/* Login form */
-  /* .login-form-button {
-    width: 60%;
-    background-color: #141414;
-  } 
+/* LOGIN FORM */
+.login-form {
+  margin-top: 4rem;
+}
 
-  .signup-form-button {
-    width: 60%;
-    background-color: #141414;
-  }
+/* SIGNUP FORM */
+.signup-form {
+  margin-top: 4rem;
+}
 
-.signup-form-button:hover {
-    background-color: #f5f5f5;
-    border-color: #f5f5f5;
-    color: black } */
+/* DASHBOARD */
+.dash-content {
+  padding: 20px;
+  margin-top: 60px;
+}
+
+.dash-hero {
+  height:120px;
+  padding-right: 2rem;
+  background-image: url('https://images.unsplash.com/photo-1517664121940-f819957bb072');
+  background-position: top left;
+  text-shadow: 2px 2px 2px grey;
+}
