finished styling forms and dashbord. added placeholder for resume card with the resume's summary, need to get date from mongo id

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -170,5 +170,5 @@ body {
   padding-right: 2rem;
   background-image: url('https://images.unsplash.com/photo-1517664121940-f819957bb072');
   background-position: top left;
-  text-shadow: 2px 2px 2px grey;
+  text-shadow: 2px 2px 2px rgb(255, 255, 255);
 }
