--- a/client/src/pages/formController.css
+++ b/client/src/pages/formController.css
@@ -1,7 +1,6 @@
-.formContainer {
-    width: 45vw;
+
+.main-container {
+    width: 100vw;
+    padding-top: 50px;
 }
 
-.resumePreview {
-    width: 45vw;
-}
