--- a/client/src/components/Forms/forms.css
+++ b/client/src/components/Forms/forms.css
@@ -1,3 +1,29 @@
-.form-container {
+/* UserInfo.jsx */
+.personal-container {
+    padding: 50px;
+}
+
+.summary {
+    padding: 50px;
+}
+
+.technical {
+    padding: 50px;
+}
+
+.projects {
+    padding: 50px;
+}
+
+.experience {
+    padding: 50px;
+}
+
+.education {
+    padding: 50px;
+}
+
+#resumePreview {
+    width: 45vw;
     padding: 50px;
 }
