--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -4,52 +4,26 @@
   font-family: Poppins, system-ui, sans-serif;
 }
 
-/* OLD NAV CSS 1st version*/
-/* .container {
-  margin: 1rem;
-  text-align: center;
-  width: 100vw;
-}
-
-.nav {
-  color: rgb(0, 0, 0);
+.menuBar {
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  padding: 0 1rem;
-  width: 100%;
+  padding: 0 20px;
+  border-bottom: solid 1px #e8e8e8;
+  overflow: auto;
+  box-shadow: 0 0 30px #f3f1f1;
+  background-color: white;
 }
 
-/* .site-title {
-  font-size: 2rem;
-} */
-
-/* .nav ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: flex;
-  color: black;
-}
-
-.nav a {
+#logo {
   color: black;
   text-decoration: none;
-  height: 100%;
+  padding-left: 1rem;
+}
+
+.menu {
   display: flex;
-  align-items: center;
-  padding: .25rem;
+  padding-top: 16px;
+  width: 100% ;
 }
-
-.nav li.active {
-  text-decoration: underline;
-  text-underline-offset: 4px;
-}
-
-.nav li:hover {
-  background-color: rgb(235, 235, 235);
-  color: black;
-} */ 
 
  #signup-link {
   background-color: black;
@@ -58,26 +32,6 @@
   padding-right: 10px;
   color: rgb(245, 245, 245);
 }
-
-/*
-#signup-link:hover {
-  background-color:rgb(58, 58, 58);
-}
-
-#signout-link {
-  background-color: black;
-  text-underline-offset: 4px;
-  border-radius: 6px;
-  color: rgb(245, 245, 245);
-}
-
-#signout-link:hover {
-  background-color:rgb(58, 58, 58);
-}
-
-p {
-  font-size: 1.1rem;
-} */
 
 /* @media (max-width: 640px) {
   .container {
